web/styles/portico/portico.css
/* ... */
.help .markdown {
    background-color: hsl(0, 0%, 100%);
    width: calc(100vw - 300px);
    height: calc(100vh - 59px);
}

.help-center ol,
.portico-landing.integrations ol {
    margin-left: 0;
}

.title {
    font-family: Helvetica, sans-serif;
    font-size: 100px;
    font-weight: bold;
    margin-top: 50px;
    margin-bottom: 60px;
}

.digest-page-title {
    text-align: center;
    font-weight: 400;
}

.thanks-page div {
    text-align: center;
}

.lead {
    font-weight: bold;
}

.pitch {
    width: 600px;
    max-width: 100%;
}

.help-inline {
    font-weight: 400;
    font-size: 0.9rem;

    &.text-error {
        color: hsl(1.1, 44.7%, 50.4%);
    }
}

a.title {
    color: hsl(0, 0%, 0%);

    &:hover {
        color: hsl(0, 0%, 50%);
        text-decoration: none;
    }
}

.fakecontrol {
    padding-top: 5px;
    font-weight: bold;
}

img.screenshot {
    /* This makes it so screenshots are still shown
    even if they are larger than their span. */
    max-width: 100%;
}

#pw_strength {
    /* Same width as a Bootstrap default text <input> with padding */
    width: 220px;
    height: 8px;
}

#registration #pw_strength {
    width: 325px;
    margin: 7px auto 0;
}

.def::before {
    content: " - ";
}

.landing-page {
    padding: 2em 0;

    h2,
    h4 {
        font-weight: lighter;
    }

    p {
        font-size: 120%;
    }
}

.platform-icon {
    width: 33%;
}

.portico-page h1 {
    font-weight: 300;
}

label.text-error {
    display: inline;

    padding-left: 5px;
}

input.text-error {
    border-color: hsl(0, 100%, 50%);
    outline-color: hsl(0, 100%, 50%);
}

.portico-container {
    position: relative;
    /* To adjust for flexible footer height we do 2 things:
      - Make the `portico-container` expand to full page height.
      - Fill the empty space with `portico-wrap`. */
    display: flex;
    flex-direction: column;
    height: 100%;

    .portico-wrap {
        flex: 1 0 auto;
    }

    .footer {
        flex-shrink: 0;
    }

    .if-zulip-electron {
        display: none;
    }
}

/* detect if the platform is `ZulipDesktop` and if so, hide this tag! */
.portico-container[data-platform="ZulipElectron"] .if-zulip-electron {
    display: block;
}

/* -- new footer -- */
.footer {
    margin: 0;
    z-index: 100;
    width: calc(100%);
    text-align: center;
    font-size: 16px;
    background-color: hsl(33, 34%, 96%);
    display: grid;
    grid-template-columns: repeat(4, max-content);
    justify-content: center;
    padding-top: 50px;
    padding-bottom: 50px;

    a {
        color: inherit !important;
    }

    .footer-section {
        margin: 0 20px;
        vertical-align: top;
        text-align: left;
        /* 20-22vw for fitting content in the 4 column grid layout. We
           need to set max-width so to avoid content overflow in different
           languagues on different widths. */
        max-width: 21vw;

        @media (width < 1200px) {
            ul li {
                text-indent: -5px;
                padding-left: 5px;
            }
        }

        h3 {
            text-transform: uppercase;
            font-size: 1em;
            font-weight: 600;
            line-height: 1.2;
            margin-bottom: 5px;
        }

        ul {
            color: hsl(0, 0%, 40%);
            list-style-type: none;
            margin-left: 0;
            font-weight: 400;
        }

        .coloured-text {
            color: hsl(0, 0%, 20%);
            font-weight: bold;
        }
    }
}

.self-hosted-footer {
    padding: 20px 0 10px;
    display: flex;
    flex-wrap: wrap;

    .break {
        flex-basis: 100%;
        height: 0;
    }

    .powered-by-zulip {
        padding: 0;
        padding-top: 10px;
        opacity: 0.9;
        font-size: 15px;
    }

    .footer-section {
        padding-bottom: 5px;
        margin: 0 15px;
    }

    .footer-section ul {
        margin: 0;
    }

    @media (width <= 500px) {
        flex-direction: column;
    }
}

/* -- end new footer -- */

.header-main {
    .logo {
        display: block;
        text-decoration: none;
        position: relative;
        line-height: 0.8;

        svg {
            vertical-align: -5px;
        }

        a,
        a:focus,
        a:hover {
            text-decoration: none;
            color: hsl(0, 0%, 20%);
        }

        .light {
            font-size: 1.2rem;
            font-weight: 400;
            color: hsl(0, 0%, 20%);
            opacity: 0.7;
        }
    }

    .portico-logo {
        height: 28px;
        width: auto;
        padding: 6px 0;
    }
}
/* ... */

